--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,9 @@
     "prettier/prettier": "error",
     "import/prefer-default-export": "off",
     "import/extensions": "off",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"]
   },
   "overrides": [
     {
